<resources>
    <string name="app_name">SceneIt</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login_view">SceneIt: Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Password Confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile">Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="send_img">Send Image</string>
    <string name="close_img">Close Image</string>
    <string name="gallery_image_loading">Gallery Image Loading</string>
    <string name="user_img">User Image</string>
    <string name="gallery_image_up">Upvote Image</string>
    <string name="gallery_image_down">Downvote Image</string>
    <string name="comment_hint">Leave a comment</string>
    <string name="send_comment">Submit Comment</string>
    <string name="image_points">Points: </string>
    <string name="profile_name">Name:</string>
    <string name="profile_username">Username</string>
    <string name="change_name">Change Name</string>
    <string name="images">Images</string>
    <string name="following">Following</string>
    <string name="user">User</string>
    <string name="username_desc">Users Profile Link</string>
    <string name="follow">Follow</string>
    <string name="unfollow">UnFollow</string>
    <string name="color_select">Select A Colour</string>
    <string name="tools">Tools</string>
    <string name="help">Help and Settings</string>
    <string name="login_auto">Remain Logged In</string>
    <string name="show_heatmap">Show Image Heatmap</string>
    <string name="help_title">Help</string>
    <string name="settings_title">Settings</string>
    <string name="next_help">Next Help</string>
    <string name="prev_help">Previous Help</string>
    <string name="next_gal">Next image</string>
    <string name="gal_prev">Previous Image</string>

</resources>
