<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryDark"
    tools:context="com.sceneit.chris.sceneit.main.gallery.GalleryImage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/gallery_image_sv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/gallery_image_vl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:elevation="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:paddingEnd="5dp"
                        android:text="@string/user"
                        android:textColor="@color/colorSecondary" />

                    <TextView
                        android:id="@+id/gal_img_usr"
                        android:layout_width="105dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/username_desc"
                        android:gravity="start"
                        android:paddingEnd="5dp"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingEnd="5dp"
                        android:text="@string/image_points"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/colorSecondary" />

                    <TextView
                        android:id="@+id/gal_img_points"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:paddingEnd="5dp"
                        android:textColor="@color/colorSecondary" />

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardElevation="5dp">

                    <ImageView
                        android:id="@+id/gallery_image_iv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:background="@color/colorSecondaryDark"
                        android:contentDescription="@string/user_img"
                        android:elevation="2dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_image_black_24dp" />
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/image_comment_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColorHint="@color/colorSecondary">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/gal_img_comment"
                                android:layout_width="331dp"
                                android:layout_height="wrap_content"
                                android:hint="@string/comment_hint"
                                android:shadowColor="@color/colorSecondary"
                                android:textColor="@color/common_google_signin_btn_text_dark_default"
                                android:textColorHighlight="@color/colorSecondary"
                                android:textColorHint="@color/colorSecondary" />
                        </android.support.design.widget.TextInputLayout>

                        <ImageButton
                            android:id="@+id/gallery_send_comment"
                            android:layout_width="104dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/send_comment"
                            android:src="@android:drawable/ic_menu_send" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gallery_comment_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/colorSecondaryDark"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/gal_img_up"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/gallery_image_up"
                android:src="@drawable/ic_arrow_upward_black_24dp"
                android:tint="@color/colorSecondary" />

            <ImageButton
                android:id="@+id/gal_img_down"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/gallery_image_down"
                android:src="@drawable/ic_arrow_downward_black_24dp"
                android:tint="@color/colorSecondary" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
